# mdbook-auto-gen-summary

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/auto_gen_summary/: mod.rs
