[package]
name = "mdbook-auto-gen-summary"
version = "0.1.6"
authors = ["George"]
edition = "2018"
description = "A preprocessor and cli tool for mdbook to auto generate summary."
license = "MIT"
documentation = "https://crates.io/crates/mdbook-auto-gen-summary"
homepage = "https://crates.io/crates/mdbook-auto-gen-summary"
repository = "https://github.com/knightflower1989/mdbook-auto-gen-summary"
readme = "README.md"
keywords = ["mdbook", "markdown", "summary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
mdbook = "0.4.6"
anyhow = "1.0.32"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
md-5 = "0.9.1"
hex = "0.4.2"
